fix overflow

--- a/bits/css/common.css
+++ b/bits/css/common.css
@@ -21,13 +21,15 @@ a:hover, a:active {
     text-shadow: -1px -1px 4px rgb(240, 240, 255);
 }
 
-.main, .pagecontent, .pagecontainer {
+.main, .pagecontent {
     width: 100%;
     margin: 0;
     padding: 0;
 }
 
 .pagecontainer {
+    width: auto;
+    margin: 0;
     padding: 1vw;
 }
 
