--- a/bits/css/keno.css
+++ b/bits/css/keno.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 #keno-grid {
     width: auto;
-    max-width: 100%;
     border: none;
     margin-left: auto;
     margin-right: auto;
@@ -22,8 +21,7 @@
 }
 
 .keno-number, .keno-info {
-    width: 10%;
-    max-width: 10%;
+    width: 8vw;
     display: table-cell;
     border: 2px solid rgb(32, 32, 32);
     border-radius: 8px;
